@@ -2347,7 +2347,8 @@ function get_status() {
 				' WHERE i.status='.ITEM_STATUS_ACTIVE.
 				' AND i.hostid=h.hostid'.
 				' AND h.status='.HOST_STATUS_MONITORED.
-				' AND i.delay<>0'
+				' AND i.delay<>0'.
+				' AND i.flags<>'.ZBX_FLAG_DISCOVERY_PROTOTYPE
 	));
 	$status['qps_total'] = round($row['qps'], 2);
 
